WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24041
Fix Chromium Linux build.
https://bugs.webkit.org/show_bug.cgi?id=24041
Summary
Fix Chromium Linux build.
Dimitri Glazkov (Google)
Reported
2009-02-19 13:15:39 PST
This corrects type conversion issues, missed somewhere inflight, when the patch was traveling from Chromium to WebKit side.
Attachments
Fix Chromium Linux build, correct type conversion, v1
(1.74 KB, patch)
2009-02-19 13:19 PST
,
Dimitri Glazkov (Google)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-02-19 13:19:10 PST
Created
attachment 27810
[details]
Fix Chromium Linux build, correct type conversion, v1 WebCore/ChangeLog | 10 ++++++++++ WebCore/platform/graphics/chromium/FontLinux.cpp | 4 ++-- 2 files changed, 12 insertions(+), 2 deletions(-)
Eric Seidel (no email)
Comment 2
2009-02-19 13:31:02 PST
Comment on
attachment 27810
[details]
Fix Chromium Linux build, correct type conversion, v1 This was my bad. r=me
Dimitri Glazkov (Google)
Comment 3
2009-02-19 13:34:03 PST
Landed as
http://trac.webkit.org/changeset/41084
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug