2009-02-19  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24041
        Correct Skia type conversion issues, fix Chromium Linux build.

        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::Font::drawGlyphs): changed parameters to RGBA32, not WebCore::Color.

Canonical link: https://commits.webkit.org/33169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41084 268f45cc-cd09-0410-ab3c-d52691b4dbfc